<resources>
    <string name="app_name">Lost And Found Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="itemDetails"></string>
    <string name="name"></string>
    <string name="phone"></string>
    <string name="description"></string>
    <string name="date"></string>
    <string name="location"></string>
    <string name="details"></string>
    <string-array name="spinnerList"></string-array>

</resources>