<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/itemDetails"
        android:layout_width="0dp"
        android:layout_height="618dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:text="@string/details"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionEntry" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="REMOVE"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/spinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="14dp"
        android:text="Lost And Found Items"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/itemDetails" />

    <Spinner
        android:id="@+id/itemsSpinner"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="26dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/nameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioText" />


    <TextView
        android:id="@+id/radioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="5dp"
        android:text="Post Type:"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="@+id/nameTitle"
        app:layout_constraintTop_toTopOf="@+id/itemDetails">


        <RadioButton
            android:id="@+id/radioLost"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:text="Lost"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="42dp" />

        <RadioButton
            android:id="@+id/radioFound"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:text="Found"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="41dp" />


    </RadioGroup>

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="146dp"
        android:text="Name:"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/nameEntry"
        app:layout_constraintEnd_toEndOf="@+id/itemsSpinner"
        app:layout_constraintStart_toStartOf="@+id/phoneEntry"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone:"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createButton" />

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="Description:"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEntry"
        app:layout_constraintStart_toStartOf="@+id/mapButton" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="40dp"
        android:text="Date"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/dateEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEntry" />

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameEntry"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="126dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/descriptionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemDetails" />

    <EditText
        android:id="@+id/phoneEntry"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="107dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/descriptionEntry"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateEntry"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="161dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/itemDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/showButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="12dp"
        android:text="SAVE"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/removeButton"
        app:layout_constraintStart_toStartOf="@+id/removeButton" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="CREATE A NEW ADVERT"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEntry" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="7dp"
        android:text="SHOW ALL LOST AND FOUND ITEMS"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEntry"
        app:layout_constraintStart_toStartOf="@+id/descriptionEntry" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="SHOW ON MAP"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionEntry" />

    <Button
        android:id="@+id/getLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="GET CURRENT LOCATION"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="Search Places"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/getLocationButton"
        app:layout_constraintStart_toStartOf="@+id/getLocationButton" />


</androidx.constraintlayout.widget.ConstraintLayout>